--- a/templates/polls/detail.html
+++ b/templates/polls/detail.html
@@ -1,3 +1,6 @@
+{% extends "polls/base.html" %}
+
+{% block content %}
 <h1>{{ poll.question }}</h1>
 
 {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
@@ -7,3 +10,4 @@
 {{ form.as_p }}
 <input type="submit" value="Vote" />
 </form>
+{% endblock %}
