--- a/templates/polls/results.html
+++ b/templates/polls/results.html
@@ -1,3 +1,6 @@
+{% extends "polls/base.html" %}
+
+{% block content %}
 <h1>{{ poll.question }}</h1>
 
 <ul>
@@ -7,3 +10,4 @@
 </ul>
 
 <a href="{% url polls_detail poll_id=poll.id %}">Vote again?</a>
+{% endblock %}
