add libraries and placeholders for backbone code

--- a/templates/polls/base.html
+++ b/templates/polls/base.html
@@ -2,6 +2,15 @@
     <head>
         <title>Polls App</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+        <script src="{{ STATIC_URL }}libs/jquery.js"></script>
+        <script src="{{ STATIC_URL }}libs/underscore.js"></script>
+        <script src="{{ STATIC_URL }}libs/backbone.js"></script>
+
+        <script src="{{ STATIC_URL }}polls/utils.js"></script>
+        <script src="{{ STATIC_URL }}polls/models.js"></script>
+        <script src="{{ STATIC_URL }}polls/views.js"></script>
+        <script src="{{ STATIC_URL }}polls/routes.js"></script>
         <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}polls/styles.css">
     </head>
 
