create a results model instance when the page loads

--- a/templates/polls/detail.html
+++ b/templates/polls/detail.html
@@ -10,4 +10,10 @@
 {{ form.as_p }}
 <input type="submit" value="Vote" />
 </form>
+
+<script>
+  results = new Polls.Results();
+  results.url = '{% url polls_api_results poll.id %}';
+</script>
+
 {% endblock %}
