add a shell for routes

--- a/templates/polls/detail.html
+++ b/templates/polls/detail.html
@@ -14,6 +14,12 @@
 <script>
   results = new Polls.Results();
   results.url = '{% url polls_api_results poll.id %}';
+
+  workflow = new Polls.Workflow({
+    model: results
+  });
+
+  Backbone.history.start({pushState: true});
 </script>
 
 {% endblock %}
